--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
    buildPlatform: 'any cpu'
     
 steps:
-- powershell: 'choco install dotnetcore-sdk --version=6.0.401'
+- powershell: 'choco install dotnetcore-sdk --version=6.0.x'
   displayName: 'Install .net core 6.0.401'
 - task: DotNetCoreCLI@2
   displayName: Restore  
